# JieGou

./: README.md
JieGou_Admin/: .gitignore  manage.py  pyproject.toml
JieGou_Admin/JieGou_Admin/: asgi.py  settings.py  urls.py  wsgi.py
JieGou_Admin/apps/seckill/: models.py  serializers.py  urls.py  views.py
JieGou_Admin/apps/seckill/jiegou_auth/: middlewares.py
JieGou_Admin/front/src/views/: FrameView.vue  HomeView.vue  LoginView.vue
JieGou_Admin/utils/: redis_key_func.py
JieGou_Admin/utils/snowflake/: snowflake.py
seckill_api/: alembic.ini  commands.py  kafka_consumer.py  main.py  pyproject.toml
seckill_api/alembic/versions/: 7861d4a5868a_create_seckill_order.py
seckill_api/hooks/: middlewares.py
seckill_api/models/: __init__.py  base.py  seckill.py
seckill_api/routers/: order.py  seckill.py
seckill_api/schemas/: requests.py  response.py
seckill_api/settings/: __init__.py
seckill_api/utils/: auth.py  cache.py  jiegou_alipay.py
user_api/: .gitignore  main.py  pyproject.toml
user_api/hooks/: lifespan.py  middlewares.py
user_api/protos/: address_pb2.py  address_pb2_grpc.py  user.proto  user_pb2.py
user_api/routers/: address.py  user.py
user_api/schemas/: request.py  response.py
user_api/services/: address.py  decorators.py  user.py
user_api/settings/: __init__.py
user_api/utils/: alyoss.py  auth.py  cache.py  custom_consul.py  local_ip_port.py  send_sms.py
user_service/: alembic.ini  main.py  pyproject.toml
user_service/alembic/versions/: 257638e1803d_add_address_model.py  72f0d0b8543a_modify_user_id.py  7650166158e5_init_database.py  c1bb3afdb9d5_modify_user_id.py  ca658bf378eb_add_user_model.py
user_service/docs/: readme.md  snowflake.ipynb
user_service/models/: __init__.py  address.py  user.py
user_service/playground/: user.py
user_service/protos/: address_pb2.pyi  user_pb2.pyi  user_pb2_grpc.py
user_service/services/: address.py  interceptors.py  user.py
user_service/settings/: __init__.py
user_service/utils/: custom_consul.py  pwdutill.py  single.py
user_service/utils/snowflake/: snowflake.py
